show image by imgLink using picaso got from firebase. delete function getProductInAllStore bc the data contain cart. So just retrieve products from each store create cart Page

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.BeWithYou"
         tools:targetApi="31">
         <activity
+            android:name=".CartPage"
+            android:exported="false" />
+        <activity
             android:name=".SearchPage"
             android:exported="false" />
         <activity
