--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.BeWithYou"
         tools:targetApi="31">
         <activity
-            android:name=".PaymentActivity"
+            android:name=".PaymentPage"
             android:exported="false" />
         <activity
             android:name=".ProductPage"
@@ -24,16 +24,16 @@
             android:name=".SearchPage"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".HomePage"
             android:exported="false" />
         <activity
-            android:name=".Register"
+            android:name=".RegisterPage"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".LoginPage"
             android:exported="false" />
         <activity
-            android:name=".StartActivity"
+            android:name=".SplashPage"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
