--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'me.zhanghai.android.materialratingbar:library:1.0.2'
+
 
 
 }
