--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.BeWithYou"
         tools:targetApi="31">
         <activity
+            android:name=".ReviewPage"
+            android:exported="false" />
+        <activity
             android:name=".ui.cart.PaymentPage"
             android:exported="false" />
         <activity
@@ -37,6 +40,7 @@
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
