--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,5 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation 'me.zhanghai.android.materialratingbar:library:1.4.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
